force-app/main/default/objects/HMS_Audit_Event__e/HMS_Audit_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for HMS audit logging to Datadog. Published synchronously from HMS object triggers and consumed asynchronously by HMS_AuditEventTrigger.</description>
    <label>HMS Audit Event</label>
    <pluralLabel>HMS Audit Events</pluralLabel>
</CustomObject>