force-app/main/default/objects/HMS_Audit_Event__e/fields/Changed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Changed_By_Name__c</fullName>
    <label>Changed By Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>