force-app/main/default/objects/HMS_Audit_Event__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>